--- a/main.css
+++ b/main.css
@@ -5,3 +5,11 @@ body {
 h1 {
   color: #FF2734;
 }
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
