--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,20 @@ a {
   color: #26a69a;
 }
 
+.card.medium {
+  height: 450px;
+}
+
 .parallax-container {
   min-height: 380px;
   line-height: 0;
   height: auto;
   color: rgba(255,255,255,.9);
 }
-  .parallax-container .section {
-    width: 100%;
-  }
+
+.parallax-container .section {
+  width: 100%;
+}
 
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
